// Placeholder Common.proto for cTrader OpenAPI
// Download real proto files from: https://github.com/spotware/OpenAPI/tree/master/proto

syntax = "proto3";

package ProtoOA;

message ProtoMessage {
  uint32 payloadType = 1;
  bytes payload = 2;
}
